version 1.5.4
changed Depends to Imports (suggestion by Suraj Gupta)